OO-4081: remove our dependency to Graphene and use Selenium directly